--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -72,8 +72,6 @@ table {
 }
 
 .messageDiv {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 20px;
-  margin: 20px;
+  display: block;
+  margin-top: 250px;
 }
